--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt, *.json"
 exclude_filter=""
 export_path="Build/猿声.exe"
 encryption_include_filters=""
